-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0
-
None
-
bb02a577f
Properties of QtQuick item classes need to be either CONSTANT or NOTIFYable otherwise they at least generate runtime warnings when using in bindings or might even not work at all.
QQuickAnimatedImage::frameCount is neither CONSTANT nor NOTIFYable
https://code.woboq.org/qt5/qtdeclarative/src/quick/items/qquickanimatedimage_p.h.html#72
Since the value of that property depends on the image source it clearly should be NOTIFYable.
This omission even breaks the example for AnimatedImage in its own documentation.
See also QTBUG-25046 which got closed without fixing the actual underlying problem of the property.