Add NOTIFY signal for QQuickAnimatedImage::frameCount

Task-number: QTBUG-62913
Change-Id: Ib561e0ab6582c1df41ae1c75ba304377c00d63f0
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>